Update some values and add some in properties file

--- a/AppiumFramework/src/main/java/mypractice/AppiumFramework/global.properties
+++ b/AppiumFramework/src/main/java/mypractice/AppiumFramework/global.properties
@@ -1,4 +1,6 @@
 ECOMMERCE_TEST_APP=General-Store.apk
-PIXEL_3A_8=niravpixel3a8
+EMULATOR_PIXEL_3A_8=niravpixel3a8
 APPIUM_TIMEOUT=15
 DEMO_API_TEST_APP=ApiDemos-debug.apk
+APPIUM_PORT=4723
+APPIUM_HOST=localhost
