--- a/AppiumFramework/pom.xml
+++ b/AppiumFramework/pom.xml
@@ -40,7 +40,7 @@
 	    <groupId>org.testng</groupId>
 	    <artifactId>testng</artifactId>
 	    <version>7.3.0</version>
-	    <scope>test</scope>
+	    <!-- <scope>test</scope> -->
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
 	<dependency>
