--- a/AppiumFramework/pom.xml
+++ b/AppiumFramework/pom.xml
@@ -92,6 +92,11 @@
 	    <version>1.7</version>
 	</dependency>
 	
+	<dependency>
+	    <groupId>com.aventstack</groupId>
+	    <artifactId>extentreports</artifactId>
+	    <version>5.0.0</version>
+	</dependency>
 	
 	
 	
